# controller/menuService.go
@@ -14,9 +14,9 @@ import (
 // @name MenuList
 // @Accept  json
 // @Produce  json
-// @Param id query string true "User input name"
-// @Param id query string true "User input sort할 컬럼이름"
-// @Param id query string true "User input order= 1은 오름찬순 그 외 내림차순 "
+// @Param name query string true "name"
+// @Param sort query string true "sort할 컬럼이름"
+// @Param order query string true "order= 1은 오름찬순 그 외 내림차순 "
 // @Router /menu/list [GET]
 // @Success 200 {object} Controller
 func (p *Controller) MenuList(c *gin.Context) {
@@ -43,14 +43,14 @@ func (p *Controller) MenuList(c *gin.Context) {
 // @name MenuReadReview
 // @Accept  json
 // @Produce  json
-// @Param id query string true "가게 이름"
-// @Param id query string true "메뉴 이름"
+// @Param id query string true "가게 사업체 id"
+// @Param name query string true "메뉴 이름"
 // @Router /menu/list/review [GET]
 // @Success 200 {object} Controller
 func (p *Controller) MenuReadReview(c *gin.Context) {
-	businessName := c.Query("id")
+	businessId := c.Query("id")
 	menuName := c.Query("name")
-	objId, err := primitive.ObjectIDFromHex(businessName)
+	objId, err := primitive.ObjectIDFromHex(businessId)
 	if err != nil {
 		panic(err)
 	}
