# route/route.go
@@ -83,12 +83,16 @@ func (p *Router) Index() *gin.Engine {
 	}
 	order := e.Group("/order", liteAuth())
 	{
-		order.POST("/make", p.ct.MakeOrder)                     //주문
+		order.POST("/make", p.ct.MakeOrder) //주문
+
 		order.GET("/list", p.ct.ListOrder)                      //주문 조회
-		order.POST("/review", p.ct.MakeReview)                  //리뷰 작성
+		order.GET("/admin/list", p.ct.AdminListOrderController) //주문 상태 조회
 		order.PATCH("/modify", p.ct.ModifyOrder)                //주문 변경
 		order.PATCH("/admin/update", p.ct.UpdateState)          //주문 상태 변경
-		order.GET("/admin/list", p.ct.AdminListOrderController) //주문 상태 조회
+	}
+	review := e.Group("review", liteAuth())
+	{
+		review.POST("", p.ct.MakeReview) //리뷰 작성
 	}
 
 	return e
